unpackaged/main/default/objects/Case/fields/Alternate_Fax__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Fax__c</fullName>
    <label>Alternate Fax</label>
    <type>Phone</type>
</CustomField>