unpackaged/main/default/objects/Case/fields/Billing_Provider_Alternate_Fax__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Alternate_Fax__c</fullName>
    <label>Billing Provider Alternate Fax</label>
    <type>Phone</type>
</CustomField>