unpackaged/main/default/objects/Case/fields/Billing_Provider_Fax__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Fax__c</fullName>
    <formula>Claim_Information__r.Billing_Provider_Fax__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Provider Fax</label>
    <type>Text</type>
</CustomField>