unpackaged/main/default/objects/Case/fields/Billing_Provider_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Full_Name__c</fullName>
    <formula>Billing_Provider_First_Name__c	+ &#39; &#39; + Billing_Provider_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Provider Full Name</label>
    <type>Text</type>
</CustomField>