unpackaged/main/default/objects/Case/fields/Billing_Provider_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Phone__c</fullName>
    <formula>HYPERLINK(&quot;tel:&quot; + Claim_Information__r.Billing_Provider_Phone__c, Claim_Information__r.Billing_Provider_Phone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Provider Phone</label>
    <type>Text</type>
</CustomField>