unpackaged/main/default/objects/Case/fields/Billing_Provider_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Provider_Point_of_Contact__c</fullName>
    <label>Billing Provider Point of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>