unpackaged/main/default/objects/Case/fields/Claim_Age_Days__c.field-meta.xml
<CustomField>
    <fullName>Claim_Age_Days__c</fullName>
    <description>Displays the Case Age in Days</description>
    <formula>IF(IsClosed,(ClosedDate - CreatedDate),(NOW() - CreatedDate))</formula>
    <label>Claim Age (In Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>