unpackaged/main/default/objects/Case/fields/Claim_Information__c.field-meta.xml
<CustomField>
    <fullName>Claim_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Claim Information</label>
    <referenceTo>Claim_Information__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>