unpackaged/main/default/objects/Case/fields/Claim_Number__c.field-meta.xml
<CustomField>
    <fullName>Claim_Number__c</fullName>
    <formula>Claim_Information__r.Primary_Claim_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Claim Number</label>
    <type>Text</type>
</CustomField>