unpackaged/main/default/objects/Case/fields/Closed_claim_age__c.field-meta.xml
<CustomField>
    <fullName>Closed_claim_age__c</fullName>
    <description>If the case is closed Age=Case Close Date-case creation date.</description>
    <label>Closed claim age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>