unpackaged/main/default/objects/Case/fields/Contact_Drug__c.field-meta.xml
<CustomField>
    <fullName>Contact_Drug__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact Drug</label>
    <referenceTo>Contact_Drug__c</referenceTo>
    <relationshipLabel>Contact Drug</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>