unpackaged/main/default/objects/Case/fields/Copay_Card_Amount_Billed__c.field-meta.xml
<CustomField>
    <fullName>Copay_Card_Amount_Billed__c</fullName>
    <label>Copay Card Amount Billed</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>