unpackaged/main/default/objects/Case/fields/Copay_card_amount_left__c.field-meta.xml
<CustomField>
    <fullName>Copay_card_amount_left__c</fullName>
    <formula>Copay_Card_Yearly_Max__c  -  Copay_Card_amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Copay card amount left</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>