unpackaged/main/default/objects/Case/fields/Copay_Card_amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Copay_Card_amount_Paid__c</fullName>
    <label>Copay Card amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>