unpackaged/main/default/objects/Case/fields/Copay_Card_Yearly_Max__c.field-meta.xml
<CustomField>
    <fullName>Copay_Card_Yearly_Max__c</fullName>
    <formula>Contact_Drug__r.Drug_Name__r.Annual_Max__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Copay Card Yearly Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>