unpackaged/main/default/objects/Case/fields/Daily_Claim__c.field-meta.xml
<CustomField>
    <fullName>Daily_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Claim</label>
    <referenceTo>Daily_Claim__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>