unpackaged/main/default/objects/Case/fields/Daily_Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>Daily_Claim_Status__c</fullName>
    <label>Daily Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Go-live Date Null</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>