unpackaged/main/default/objects/Case/fields/Date_Of_Service_From__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Service_From__c</fullName>
    <formula>Claim_Information__r.Date_Of_Service_From__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Service From</label>
    <type>Date</type>
</CustomField>