unpackaged/main/default/objects/Case/fields/Date_of_Service_To__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Service_To__c</fullName>
    <formula>Claim_Information__r.Date_Of_Service_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Service To</label>
    <type>Date</type>
</CustomField>