unpackaged/main/default/objects/Case/fields/Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Code__c</fullName>
    <label>Diagnosis Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>