unpackaged/main/default/objects/Case/fields/Drug_Cost_Paid_by_Primary_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Drug_Cost_Paid_by_Primary_Insurance__c</fullName>
    <formula>Claim_Information__r.Amount_Paid_By_Primary__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Drug Cost Paid by Primary Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>