unpackaged/main/default/objects/Case/fields/Drug_Label_Name__c.field-meta.xml
<CustomField>
    <fullName>Drug_Label_Name__c</fullName>
    <label>Drug Label Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>