unpackaged/main/default/objects/Case/fields/Drug_Name__c.field-meta.xml
<CustomField>
    <fullName>Drug_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp; Contact_Drug__r.Drug_Name__c, Contact_Drug__r.Drug_Name__r.Name,&quot;_self&quot;)</formula>
    <label>Drug Name</label>
    <type>Text</type>
</CustomField>