unpackaged/main/default/objects/Case/fields/Enrollment_Case_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Case_Close_Reason__c</fullName>
    <label>Enrollment Case Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UTC MBR and HCP</fullName>
            </value>
            <value>
                <fullName>CPA obtained</fullName>
            </value>
            <value>
                <fullName>CPA Not Available</fullName>
            </value>
            <value>
                <fullName>UTC MBR involvement is needed</fullName>
            </value>
            <value>
                <fullName>MBR deceased</fullName>
            </value>
            <value>
                <fullName>UTC HCP</fullName>
            </value>
            <value>
                <fullName>CPA pending - not on file</fullName>
            </value>
            <value>
                <fullName>MBR Not eligible for CPA</fullName>
            </value>
            <value>
                <fullName>HCP Not participating</fullName>
            </value>
            <value>
                <fullName>HCP states No Copay ($0).</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>