unpackaged/main/default/objects/Case/fields/Facility_Contact_s_Direct_Number__c.field-meta.xml
<CustomField>
    <fullName>Facility_Contact_s_Direct_Number__c</fullName>
    <formula>Claim_Information__r.Direct_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility Contact&#39;s Direct Number</label>
    <type>Text</type>
</CustomField>