unpackaged/main/default/objects/Case/fields/Fax_Received__c.field-meta.xml
<CustomField>
    <fullName>Fax_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fax Received 🚩</label>
    <type>Checkbox</type>
</CustomField>