unpackaged/main/default/objects/Case/fields/Follow_up_Time__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Time__c</fullName>
    <inlineHelpText>The next time we should be following up with the customer. This field is filled in when assigning a Case back to the queue.</inlineHelpText>
    <label>Follow-up Time</label>
    <type>DateTime</type>
</CustomField>