unpackaged/main/default/objects/Case/fields/Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Go_Live_Date__c</fullName>
    <formula>Contact.CSA__r.Go_Live_Date__c</formula>
    <label>Go Live Date</label>
    <type>Date</type>
</CustomField>