unpackaged/main/default/objects/Case/fields/HCP_Enrollment_Outreach__c.field-meta.xml
<CustomField>
    <fullName>HCP_Enrollment_Outreach__c</fullName>
    <description>Health Care Provider Outreach Status for Enrollment Cases.</description>
    <inlineHelpText>Health Care Provider Outreach Status for Enrollment Cases.</inlineHelpText>
    <label>HCP Action Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outreach Needed</fullName>
                <default>true</default>
                <label>Outreach Needed</label>
            </value>
            <value>
                <fullName>Fax Received</fullName>
            </value>
            <value>
                <fullName>Outreach Complete</fullName>
            </value>
            <value>
                <fullName>1st Attempt</fullName>
                <isActive>false</isActive>
                <label>1st Attempt</label>
            </value>
            <value>
                <fullName>2nd Attempt</fullName>
                <isActive>false</isActive>
                <label>2nd Attempt</label>
            </value>
            <value>
                <fullName>3rd Attempt</fullName>
                <isActive>false</isActive>
                <label>3rd Attempt</label>
            </value>
            <value>
                <fullName>CPA Confirmed</fullName>
                <isActive>false</isActive>
                <label>CPA Confirmed</label>
            </value>
            <value>
                <fullName>CPA Pending</fullName>
                <isActive>false</isActive>
                <label>CPA Pending</label>
            </value>
            <value>
                <fullName>No CPA Available</fullName>
                <isActive>false</isActive>
                <label>No CPA Available</label>
            </value>
            <value>
                <fullName>Not Reached</fullName>
                <isActive>false</isActive>
                <label>Not Reached</label>
            </value>
            <value>
                <fullName>Outreach Needed*</fullName>
                <isActive>false</isActive>
                <label>Outreach Needed*</label>
            </value>
            <value>
                <fullName>Reimbursement Confirmed</fullName>
                <isActive>false</isActive>
                <label>Reimbursement Confirmed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>