unpackaged/main/default/objects/Case/fields/Historical_Prior_Auth__c.field-meta.xml
<CustomField>
    <fullName>Historical_Prior_Auth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Historical Prior Auth</label>
    <referenceTo>Historical_Prior_Auth__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>