unpackaged/main/default/objects/Case/fields/isMostRecentFaxBad__c.field-meta.xml
<CustomField>
    <fullName>isMostRecentFaxBad__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMostRecentFaxBad</label>
    <type>Checkbox</type>
</CustomField>