unpackaged/main/default/objects/Case/fields/Last_Activity_Detail__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Detail__c</fullName>
    <inlineHelpText>Outlines the prior activity as captured by the Service Rep. This will be updated when transferring the Case back to the queue.</inlineHelpText>
    <label>Last Activity Detail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Voicemail</fullName>
            </value>
            <value>
                <fullName>Needs Follow-Up</fullName>
            </value>
            <value>
                <fullName>Left a Message (not with Member)</fullName>
            </value>
            <value>
                <fullName>Invalid Number</fullName>
            </value>
            <value>
                <fullName>Ring-No Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>