unpackaged/main/default/objects/Case/fields/Latest_PRx_Outreach_Attemp__c.field-meta.xml
<CustomField>
    <fullName>Latest_PRx_Outreach_Attemp__c</fullName>
    <description>Last unsuccessful outreach date to the member. Format mm/dd/yyyy.</description>
    <label>Latest PRx Outreach Attemp</label>
    <type>Date</type>
</CustomField>