unpackaged/main/default/objects/Case/fields/Most_Recent_Service_From_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Service_From_Date__c</fullName>
    <label>Most Recent Service From Date</label>
    <type>Date</type>
</CustomField>