unpackaged/main/default/objects/Case/fields/Name_Type_Code_Translation__c.field-meta.xml
<CustomField>
    <fullName>Name_Type_Code_Translation__c</fullName>
    <formula>Claim_Information__r.Name_Type_Code_Translation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name Type Code Translation</label>
    <type>Text</type>
</CustomField>