unpackaged/main/default/objects/Case/fields/Open_claim_age__c.field-meta.xml
<CustomField>
    <fullName>Open_claim_age__c</fullName>
    <description>If the case is open Age=Today-case creation date.</description>
    <label>Open claim age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>