unpackaged/main/default/objects/Case/fields/Outreach_Type__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Type__c</fullName>
    <description>Select who Aetna needs to make an outbound telephonic outreach to.</description>
    <inlineHelpText>Select who Aetna needs to make an outbound telephonic outreach to.</inlineHelpText>
    <label>Outreach Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MBR</fullName>
            </value>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>