unpackaged/main/default/objects/Case/fields/Patient_Pay_Amount_for_Drug__c.field-meta.xml
<CustomField>
    <fullName>Patient_Pay_Amount_for_Drug__c</fullName>
    <formula>Claim_Information__r.Total_Coinsurance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Patient Pay Amount for Drug</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>