unpackaged/main/default/objects/Case/fields/Prescriber_Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Address_Line_1__c</fullName>
    <label>Prescriber Address Line 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>