unpackaged/main/default/objects/Case/fields/Prescriber_City__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_City__c</fullName>
    <label>Prescriber City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>