unpackaged/main/default/objects/Case/fields/Prescriber_Fax__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Fax__c</fullName>
    <label>Prescriber Fax</label>
    <length>40</length>
    <type>Text</type>
</CustomField>