unpackaged/main/default/objects/Case/fields/Prescriber_Phone__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Phone__c</fullName>
    <label>Prescriber Phone</label>
    <type>Phone</type>
</CustomField>