unpackaged/main/default/objects/Case/fields/Prescriber_State__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_State__c</fullName>
    <label>Prescriber State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>