unpackaged/main/default/objects/Case/fields/Prescriber_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Prescriber_Zip_Code__c</fullName>
    <label>Prescriber Zip Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>