unpackaged/main/default/objects/Case/fields/Prior_Auth__c.field-meta.xml
<CustomField>
    <fullName>Prior_Auth__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prior Auth</label>
    <referenceTo>Prior_Auth__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>