unpackaged/main/default/objects/Case/fields/Prior_Authorization_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Authorization_Expiration_Date__c</fullName>
    <label>Prior Authorization Expiration Date</label>
    <type>Date</type>
</CustomField>