unpackaged/main/default/objects/Case/fields/Prior_Authorization_Number__c.field-meta.xml
<CustomField>
    <fullName>Prior_Authorization_Number__c</fullName>
    <label>Prior Authorization Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>