unpackaged/main/default/objects/Case/fields/Prior_Authorization_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Prior_Authorization_Start_Date__c</fullName>
    <label>Prior Authorization Start Date</label>
    <type>Date</type>
</CustomField>