unpackaged/main/default/objects/Case/fields/Reimbursement_Case_Close_Reason__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Case_Close_Reason__c</fullName>
    <label>Reimbursement Case Close Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MBR not enrolled</fullName>
            </value>
            <value>
                <fullName>Reimbursement confirmed</fullName>
            </value>
            <value>
                <fullName>HCP states No Copay ($0)</fullName>
            </value>
            <value>
                <fullName>MBR Not eligible for CPA</fullName>
            </value>
            <value>
                <fullName>UTC MBR &amp; HCP unable to confirm reimbursement</fullName>
            </value>
            <value>
                <fullName>UTC MBR involved in reimbursement process</fullName>
            </value>
            <value>
                <fullName>UTC HCP</fullName>
            </value>
            <value>
                <fullName>No CPA available</fullName>
            </value>
            <value>
                <fullName>HCP Not participating</fullName>
            </value>
            <value>
                <fullName>No copay on claim ($0)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>