unpackaged/main/default/objects/Case/fields/Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Date__c</fullName>
    <description>Response date for reporting capability</description>
    <inlineHelpText>Response date for reporting capability</inlineHelpText>
    <label>Response Date</label>
    <type>Date</type>
</CustomField>