unpackaged/main/default/objects/Case/fields/Send_to_Aetna__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Aetna__c</fullName>
    <description>Once a week (Sunday 10pm ET), sweep all Cases with the Status = “Transfer to Health Plan”. For all records identified, set Sent to Aetna (new field) to “Queued”</description>
    <label>Send to Aetna</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>