unpackaged/main/default/objects/Case/fields/Service_Facility_Contact__c.field-meta.xml
<CustomField>
    <fullName>Service_Facility_Contact__c</fullName>
    <formula>Claim_Information__r.Service_Facility_Contact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Facility Contact</label>
    <type>Text</type>
</CustomField>