unpackaged/main/default/objects/Case/fields/Service_Facility_Phone__c.field-meta.xml
<CustomField>
    <fullName>Service_Facility_Phone__c</fullName>
    <formula>&quot;(&quot; + LEFT( Claim_Information__r.Service_Facility_Phone__c, 3) + &quot;)-&quot; + MID(Claim_Information__r.Service_Facility_Phone__c, 4, 3) + &quot;-&quot; + MID(Claim_Information__r.Service_Facility_Phone__c, 7, 4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Facility Phone</label>
    <type>Text</type>
</CustomField>