unpackaged/main/default/objects/Case/fields/Service_Provider_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_First_Name__c</fullName>
    <label>Service Provider First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>