unpackaged/main/default/objects/Case/fields/Service_Provider_Phone__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Phone__c</fullName>
    <label>Service Provider Phone</label>
    <type>Phone</type>
</CustomField>