unpackaged/main/default/objects/Case/fields/Service_Provider_Point_of_Contact__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Point_of_Contact__c</fullName>
    <label>Service Provider Point of Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>