unpackaged/main/default/objects/Case/fields/Service_Provider_Practice__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Practice__c</fullName>
    <label>Service Provider Practice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>