unpackaged/main/default/objects/Case/fields/Service_Provider_s_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_s_Name__c</fullName>
    <formula>Service_Provider_First_Name__c &amp; &quot; &quot; &amp; Service_Provider_Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Provider&#39;s Name</label>
    <type>Text</type>
</CustomField>