unpackaged/main/default/objects/Case/fields/Service_Provider_State__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_State__c</fullName>
    <label>Service Provider State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>