unpackaged/main/default/objects/Case/fields/Service_Provider_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Updated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a new custom field added for ADO-1640 to track the Salesforce user who modified the Service Provider fields.</description>
    <label>Service Provider Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>