unpackaged/main/default/objects/Case/fields/Service_Provider_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Updated_Date__c</fullName>
    <description>This is a new custom field to track the latest changes related to the Service Provider fields on the Case. This is related to ADO-1640.</description>
    <label>Service Provider Updated Date</label>
    <type>DateTime</type>
</CustomField>