unpackaged/main/default/objects/Case/recordTypes/Enrollment.recordType-meta.xml
<RecordType>
    <fullName>Enrollment</fullName>
    <active>true</active>
    <businessProcess>Enrollment</businessProcess>
    <label>Enrollment</label>
</RecordType>