unpackaged/main/default/objects/Case/recordTypes/Introduction.recordType-meta.xml
<RecordType>
    <fullName>Introduction</fullName>
    <active>true</active>
    <businessProcess>Introduction</businessProcess>
    <label>Introduction</label>
</RecordType>