unpackaged/main/default/objects/Case/recordTypes/Reimbursement.recordType-meta.xml
<RecordType>
    <fullName>Reimbursement</fullName>
    <active>true</active>
    <businessProcess>Reimbursement</businessProcess>
    <label>Reimbursement</label>
</RecordType>