unpackaged/main/default/objects/Case/validationRules/Enrolllment_Case_Closed_Reason_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Enrolllment_Case_Closed_Reason_Required</fullName>
    <active>false</active>
    <errorConditionFormula>ISPICKVAL(Status,&#39;Outreach Completed&#39;) &amp;&amp;
ISPICKVAL(Enrollment_Case_Close_Reason__c,&#39;&#39;) &amp;&amp;
RecordType.DeveloperName = &#39;Enrollment&#39;</errorConditionFormula>
    <errorDisplayField>Enrollment_Case_Close_Reason__c</errorDisplayField>
    <errorMessage>Please select a Case Closed Reason to close this Enrollment case</errorMessage>
</ValidationRule>